# clacky-ai-paas-dsagent/api/image/v1/image_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.5.1
-// - protoc             v5.29.2
+// - protoc             v3.12.4
 // source: image/v1/image.proto
 
 package v1
@@ -28,6 +28,8 @@ const (
 	ImageService_LoadImage_FullMethodName    = "/image.v1.ImageService/LoadImage"
 	ImageService_ImageHistory_FullMethodName = "/image.v1.ImageService/ImageHistory"
 	ImageService_InspectImage_FullMethodName = "/image.v1.ImageService/InspectImage"
+	ImageService_ECRLogin_FullMethodName     = "/image.v1.ImageService/ECRLogin"
+	ImageService_ECRLogout_FullMethodName    = "/image.v1.ImageService/ECRLogout"
 )
 
 // ImageServiceClient is the client API for ImageService service.
@@ -54,6 +56,10 @@ type ImageServiceClient interface {
 	ImageHistory(ctx context.Context, in *ImageHistoryRequest, opts ...grpc.CallOption) (*ImageHistoryResponse, error)
 	// Get image details (equivalent to nerdctl inspect on images)
 	InspectImage(ctx context.Context, in *InspectImageRequest, opts ...grpc.CallOption) (*InspectImageResponse, error)
+	// Login to ECR registry
+	ECRLogin(ctx context.Context, in *ECRLoginRequest, opts ...grpc.CallOption) (*ECRLoginResponse, error)
+	// Logout from ECR registry
+	ECRLogout(ctx context.Context, in *ECRLogoutRequest, opts ...grpc.CallOption) (*ECRLogoutResponse, error)
 }
 
 type imageServiceClient struct {
@@ -154,6 +160,26 @@ func (c *imageServiceClient) InspectImage(ctx context.Context, in *InspectImageR
 	return out, nil
 }
 
+func (c *imageServiceClient) ECRLogin(ctx context.Context, in *ECRLoginRequest, opts ...grpc.CallOption) (*ECRLoginResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ECRLoginResponse)
+	err := c.cc.Invoke(ctx, ImageService_ECRLogin_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *imageServiceClient) ECRLogout(ctx context.Context, in *ECRLogoutRequest, opts ...grpc.CallOption) (*ECRLogoutResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ECRLogoutResponse)
+	err := c.cc.Invoke(ctx, ImageService_ECRLogout_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ImageServiceServer is the server API for ImageService service.
 // All implementations must embed UnimplementedImageServiceServer
 // for forward compatibility.
@@ -178,6 +204,10 @@ type ImageServiceServer interface {
 	ImageHistory(context.Context, *ImageHistoryRequest) (*ImageHistoryResponse, error)
 	// Get image details (equivalent to nerdctl inspect on images)
 	InspectImage(context.Context, *InspectImageRequest) (*InspectImageResponse, error)
+	// Login to ECR registry
+	ECRLogin(context.Context, *ECRLoginRequest) (*ECRLoginResponse, error)
+	// Logout from ECR registry
+	ECRLogout(context.Context, *ECRLogoutRequest) (*ECRLogoutResponse, error)
 	mustEmbedUnimplementedImageServiceServer()
 }
 
@@ -214,6 +244,12 @@ func (UnimplementedImageServiceServer) ImageHistory(context.Context, *ImageHisto
 }
 func (UnimplementedImageServiceServer) InspectImage(context.Context, *InspectImageRequest) (*InspectImageResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method InspectImage not implemented")
+}
+func (UnimplementedImageServiceServer) ECRLogin(context.Context, *ECRLoginRequest) (*ECRLoginResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ECRLogin not implemented")
+}
+func (UnimplementedImageServiceServer) ECRLogout(context.Context, *ECRLogoutRequest) (*ECRLogoutResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ECRLogout not implemented")
 }
 func (UnimplementedImageServiceServer) mustEmbedUnimplementedImageServiceServer() {}
 func (UnimplementedImageServiceServer) testEmbeddedByValue()                      {}
@@ -398,6 +434,42 @@ func _ImageService_InspectImage_Handler(srv interface{}, ctx context.Context, de
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ImageService_ECRLogin_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ECRLoginRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ImageServiceServer).ECRLogin(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ImageService_ECRLogin_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ImageServiceServer).ECRLogin(ctx, req.(*ECRLoginRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ImageService_ECRLogout_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ECRLogoutRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ImageServiceServer).ECRLogout(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ImageService_ECRLogout_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ImageServiceServer).ECRLogout(ctx, req.(*ECRLogoutRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // ImageService_ServiceDesc is the grpc.ServiceDesc for ImageService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -440,6 +512,14 @@ var ImageService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "InspectImage",
 			Handler:    _ImageService_InspectImage_Handler,
+		},
+		{
+			MethodName: "ECRLogin",
+			Handler:    _ImageService_ECRLogin_Handler,
+		},
+		{
+			MethodName: "ECRLogout",
+			Handler:    _ImageService_ECRLogout_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
