# clacky-ai-paas-dsagent/api/image/v1/image_http.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-http v2.8.3
-// - protoc             v5.29.2
+// - protoc-gen-go-http v2.8.4
+// - protoc             v3.12.4
 // source: image/v1/image.proto
 
 package v1
@@ -19,6 +19,8 @@ var _ = binding.EncodeURL
 
 const _ = http.SupportPackageIsVersion1
 
+const OperationImageServiceECRLogin = "/image.v1.ImageService/ECRLogin"
+const OperationImageServiceECRLogout = "/image.v1.ImageService/ECRLogout"
 const OperationImageServiceImageHistory = "/image.v1.ImageService/ImageHistory"
 const OperationImageServiceInspectImage = "/image.v1.ImageService/InspectImage"
 const OperationImageServiceListImages = "/image.v1.ImageService/ListImages"
@@ -30,6 +32,10 @@ const OperationImageServiceSaveImage = "/image.v1.ImageService/SaveImage"
 const OperationImageServiceTagImage = "/image.v1.ImageService/TagImage"
 
 type ImageServiceHTTPServer interface {
+	// ECRLogin Login to ECR registry
+	ECRLogin(context.Context, *ECRLoginRequest) (*ECRLoginResponse, error)
+	// ECRLogout Logout from ECR registry
+	ECRLogout(context.Context, *ECRLogoutRequest) (*ECRLogoutResponse, error)
 	// ImageHistory Show image history (equivalent to nerdctl history)
 	ImageHistory(context.Context, *ImageHistoryRequest) (*ImageHistoryResponse, error)
 	// InspectImage Get image details (equivalent to nerdctl inspect on images)
@@ -61,6 +67,8 @@ func RegisterImageServiceHTTPServer(s *http.Server, srv ImageServiceHTTPServer) 
 	r.POST("/v1/images/load", _ImageService_LoadImage0_HTTP_Handler(srv))
 	r.GET("/v1/images/{name}/history", _ImageService_ImageHistory0_HTTP_Handler(srv))
 	r.GET("/v1/images/{name}/inspect", _ImageService_InspectImage0_HTTP_Handler(srv))
+	r.POST("/v1/ecr/login", _ImageService_ECRLogin0_HTTP_Handler(srv))
+	r.POST("/v1/ecr/logout", _ImageService_ECRLogout0_HTTP_Handler(srv))
 }
 
 func _ImageService_ListImages0_HTTP_Handler(srv ImageServiceHTTPServer) func(ctx http.Context) error {
@@ -261,7 +269,53 @@ func _ImageService_InspectImage0_HTTP_Handler(srv ImageServiceHTTPServer) func(c
 	}
 }
 
+func _ImageService_ECRLogin0_HTTP_Handler(srv ImageServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ECRLoginRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationImageServiceECRLogin)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ECRLogin(ctx, req.(*ECRLoginRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ECRLoginResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ImageService_ECRLogout0_HTTP_Handler(srv ImageServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ECRLogoutRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationImageServiceECRLogout)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ECRLogout(ctx, req.(*ECRLogoutRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ECRLogoutResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
 type ImageServiceHTTPClient interface {
+	ECRLogin(ctx context.Context, req *ECRLoginRequest, opts ...http.CallOption) (rsp *ECRLoginResponse, err error)
+	ECRLogout(ctx context.Context, req *ECRLogoutRequest, opts ...http.CallOption) (rsp *ECRLogoutResponse, err error)
 	ImageHistory(ctx context.Context, req *ImageHistoryRequest, opts ...http.CallOption) (rsp *ImageHistoryResponse, err error)
 	InspectImage(ctx context.Context, req *InspectImageRequest, opts ...http.CallOption) (rsp *InspectImageResponse, err error)
 	ListImages(ctx context.Context, req *ListImagesRequest, opts ...http.CallOption) (rsp *ListImagesResponse, err error)
@@ -279,6 +333,32 @@ type ImageServiceHTTPClientImpl struct {
 
 func NewImageServiceHTTPClient(client *http.Client) ImageServiceHTTPClient {
 	return &ImageServiceHTTPClientImpl{client}
+}
+
+func (c *ImageServiceHTTPClientImpl) ECRLogin(ctx context.Context, in *ECRLoginRequest, opts ...http.CallOption) (*ECRLoginResponse, error) {
+	var out ECRLoginResponse
+	pattern := "/v1/ecr/login"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationImageServiceECRLogin))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *ImageServiceHTTPClientImpl) ECRLogout(ctx context.Context, in *ECRLogoutRequest, opts ...http.CallOption) (*ECRLogoutResponse, error) {
+	var out ECRLogoutResponse
+	pattern := "/v1/ecr/logout"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationImageServiceECRLogout))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
 }
 
 func (c *ImageServiceHTTPClientImpl) ImageHistory(ctx context.Context, in *ImageHistoryRequest, opts ...http.CallOption) (*ImageHistoryResponse, error) {
